--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,7 +1,7 @@
 info:
   title: 'NYSE Ticker'
   description: 'Look up the latest prices for stocks on the NYSE.'
-  x-21-quick-buy: '21 buy http://10.244.120.4:10115/price?symbol=DPZ'
+  x-21-quick-buy: '21 buy http://[fcce:a977:ee41:e895:bee4:0000:0000:0001]:10115/price?symbol=DPZ'
   x-21-category: markets
   x-21-app-image: "https://cdn.filepicker.io/api/file/bDNgOE9pQnqvCi17QmzG"
   x-21-total-price:
@@ -10,7 +10,7 @@ info:
   contact:
     name: Will Binns
     email: binns@21.co
-host: 10.244.120.4:10115
+host: '[fcce:a977:ee41:e895:bee4:0000:0000:0001]:10115'
 schemes:
   - http
 basePath: /
